# starfish

./: Cargo.toml  README.md  example.toml
src/: config.rs  gacha.rs  keybinding.rs  main.rs  prompt.rs  startup.rs  theme.rs
