[package]
name = "starfish"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
description = "the Super Tasty Aesthetic Rusty Friendly Interactive SHell"
repository = "https://github.com/shellrs/starfish"

[features]

[dependencies]
shrs = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_cd_stack = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_cd_tools = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_command_timer = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_rhai = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_rhai_completion = { git = "https://github.com/MrPicklePinosaur/shrs" }

dirs = { version = "5" }

serde = { version = "1" }
toml = { version = "0.8" }
crossterm = "0.26"

thiserror = "1"
anyhow = "1"

log = "0.4"
simplelog = { version = "^0.11.0", features = ["paris"] }
